<resources>
    <string name="app_name">Workout Builder</string>

    <!-- Exercise Activity Strings -->
    <string name="action_exercise">Add/Edit Exercise</string>
    <string name="button_addExercise">Add Exercise</string>
    <string name="button_addImage"> Add Image/Gif </string>
    <string name="change_exercise_image">Change Image/Gif</string>
    <string name="save_exercise">Save Exercise</string>
    <string name="hint_exerciseTitle">Exercise Title</string>
    <string name="enter_exercise_title">Please enter an Exercise Title</string>
    <string name="hint_exerciseDescription">Exercise Description</string>
    <string name="select_exercise_image">Select placemark image</string>

    <!-- Nav Drawer Menu Strings -->
    <string name="nav_header_title">Workout Builder</string>
    <string name="menu_addExercise">Add Exercise</string>
    <string name="menu_cancelExercise">Cancel</string>
    <string name="menu_deleteExercise">Delete</string>
    <string name="menu_aboutus">About Us</string>

    <!-- Exercise List Strings-->
    <string name="title_exercise_category">Exercise Category</string>
    <string name="strength">Strength</string>
    <string name="endurance">Endurance</string>
    <string name="balance">Balance</string>
    <string name="flexibility">Flexibility</string>
    <string name="title_body_area">Target Body Area</string>
    <string name="upper_body">Upper</string>
    <string name="lower_body">Lower</string>
    <string name="whole_body">Whole</string>
    <string name="core_abs">Core/Abs</string>
    <string name="target_body_area">Target Body Area</string>
    <string name="filter_category">Filter by Category</string>
    <string name="filter_target_area">Filter by Target Body Area</string>


    <string name="nav_header_subtitle">workoutbuilder@android.ie</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="all_exercises">All Exercises</string>
    <string name="action_exerciseList">All Exercises</string>
    <string name="add_exercise">Add Exercise</string>


    <!-- Workout Strings -->
    <string name="hint_workoutTitle">Workout Title</string>
    <string name="workoutDescription">Workout Description</string>
    <string name="target_body_areas">Target Body Area(s)</string>
    <string name="button_addWorkout">Add Workout</string>
    <string name="button_selectExercises">Select Exercises</string>
    <string name="action_workout">Add/Edit Workout</string>
    <string name="action_workoutList">My Workouts</string>
    <string name="card_exercise_target_area">Target Area:</string>
    <string name="card_exercise_category">Category:</string>
    <string name="save_workout">Save Workout</string>
    <string name="select_target_area">Please select at least one Target Body Area</string>
    <string name="login_title">Please Login or Sign Up</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email Address</string>
    <string name="auth_failed">Login Faled</string>
    <string name="access_control">Access Control</string>
    <string name="reps">Reps: </string>

</resources>