<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.WorkoutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/workout_title"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:hint="@string/hint_workoutTitle"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/workout_description"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="8dp"
                android:hint="@string/workoutDescription"
                android:inputType="text"
                android:maxLength="100"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:text="@string/target_body_areas"
                android:textSize="16sp"/>

            <CheckBox
                android:id="@+id/upperBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upper_body"
                android:onClick="onCheckboxClicked"/>

            <CheckBox
                android:id="@+id/lowerBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lower_body"
                android:onClick="onCheckboxClicked"/>

            <CheckBox
                android:id="@+id/coreAbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/core_abs"
                android:onClick="onCheckboxClicked"/>

            <CheckBox
                android:id="@+id/wholeBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whole_body"
                android:onClick="onCheckboxClicked"/>

            <Button
                android:id="@+id/btnSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_selectExercises"
                android:textColor="@color/colorSecondary"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_addWorkout"
                android:textColor="@color/colorSecondary"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>