<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/endurance_check"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".fragments.ExerciseListFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="true"
        app:elevation="0dip"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/colorSecondary" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/filter_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginTop="5sp"
            android:textColor="@color/colorSecondary"
            android:textSize="18sp"
            android:text="@string/filter_category" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strength"
                android:textColor="@color/colorSecondary"
                android:onClick="onCheckboxClick"/>

            <CheckBox
                android:id="@+id/checkBox_endurance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endurance"
                android:textColor="@color/colorSecondary"
                android:onClick="onCheckboxClick"/>

            <CheckBox
                android:id="@+id/checkBox_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textColor="@color/colorSecondary"
                android:onClick="onCheckboxClick"/>

            <CheckBox
                android:id="@+id/checkBox_flexibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flexibility"
                android:textColor="@color/colorSecondary"
                android:onClick="onCheckboxClick"/>

        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/filter_target_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_marginTop="5sp"
            android:textColor="@color/colorSecondary"
            android:textSize="18sp"
            android:text="@string/filter_target_area" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox_upper_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upper_body"
                android:textColor="@color/colorSecondary"
                android:onClick="onCheckboxClick"/>

            <CheckBox
                android:id="@+id/checkBox_lower_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lower_body"
                android:textColor="@color/colorSecondary"
                android:onClick="onCheckboxClick"/>

            <CheckBox
                android:id="@+id/checkBox_core_abs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/core_abs"
                android:textColor="@color/colorSecondary"
                android:onClick="onCheckboxClick"/>

            <CheckBox
                android:id="@+id/checkBox_whole_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whole_body"
                android:textColor="@color/colorSecondary"
                android:onClick="onCheckboxClick"/>

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>